2023-11-23T00:59:58Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6964352541 # 2105
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-23
* notice: last 14d: unq all: 15 32
* notice: prev accum: outdated-unq outdated-all / unq all: 1369 3282 / 1394 3315
* notice: next accum: outdated-unq outdated-all / unq all: 1370 3284 / 1394 3316
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2023-11-08] / [2023-11-22]

2023-11-22T08:17:18Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6954585170 # 2103
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-22
* notice: last 14d: unq all: 15 32
* notice: prev accum: outdated-unq outdated-all / unq all: 1369 3282 / 1393 3314
* notice: next accum: outdated-unq outdated-all / unq all: 1369 3282 / 1394 3315
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-11-08 2023-11-22]

2023-11-22T01:02:45Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6951466317 # 2102
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-22
* notice: last 14d: unq all: 15 32
* notice: prev accum: outdated-unq outdated-all / unq all: 1368 3280 / 1393 3313
* notice: next accum: outdated-unq outdated-all / unq all: 1369 3282 / 1393 3314
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [2023-11-07] / [2023-11-21]

2023-11-21T08:17:11Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6941036833 # 2100