@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-11-23T00:59:58Z",
+  "timestamp" : "2023-11-23T08:16:35Z",
   "count_outdated" : 3284,
   "uniques_outdated" : 1370,
-  "count" : 3316,
-  "uniques" : 1394,
+  "count" : 3339,
+  "uniques" : 1411,
   "clones" : [
     {
       "timestamp": "2023-11-09T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -85,6 +85,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-11-23T00:00:00Z",
+      "count": 23,
+      "count_minmax": [ 23, 23 ],
+      "count_decinc": [ 0, 23 ],
+      "uniques": 17,
+      "uniques_minmax": [ 17, 17 ],
+      "uniques_decinc": [ 0, 17 ]
     }
   ]
 }
