@@ -1,10 +1,10 @@
 {
-  "count": 32,
-  "uniques": 15,
+  "count": 54,
+  "uniques": 31,
   "clones": [
     {
       "timestamp": "2023-11-09T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -46,6 +46,11 @@
       "timestamp": "2023-11-22T00:00:00Z",
       "count": 2,
       "uniques": 1
+    },
+    {
+      "timestamp": "2023-11-23T00:00:00Z",
+      "count": 23,
+      "uniques": 17
     }
   ]
 }
